push swap final version

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -1,20 +1,18 @@
 CC=cc
 CFLAGS=-Wall -Wextra -Werror
 SRCS=push_swap.c \
-	 ./utils/push_swap_utils.c \
-	 ./init/push_swap_parse.c \
-	 ./init/push_swap_init.c \
-	 ./sort/push_swap_exec.c \
-	 ./sort/push_swap_exec_while.c \
-	 ./sort/push_swap_get_pivot.c \
-	 ./sort/push_swap_sort.c \
-	 ./commands/push_swap_command_push.c \
-	 ./commands/push_swap_command_swap.c \
-	 ./commands/push_swap_command_rotate.c \
-	 ./commands/push_swap_command_reverse_rotate.c \
-	 test.c
+	 push_swap_free_error.c \
+	 push_swap_parse.c \
+	 push_swap_init.c \
+	 push_swap_exec.c \
+	 push_swap_exec_while.c \
+	 push_swap_get_pivot.c \
+	 push_swap_sort.c \
+	 push_swap_command_push.c \
+	 push_swap_command_swap.c \
+	 push_swap_command_rotate.c \
+	 push_swap_command_reverse_rotate.c
 OBJS=$(SRCS:.c=.o)
-INC=./include
 NAME=push_swap
 
 all : $(NAME)
@@ -23,12 +21,12 @@ $(NAME) : $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $^
 
 .c.o :
-	$(CC) $(CFLAGS) -c -o $@ $< -I $(INC)
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean :
 	rm -rf $(OBJS)
 
-fclean :
-	rm -rf $(OBJS) $(NAME)
+fclean : clean
+	rm -rf $(NAME)
 
 re : fclean all
